--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@mdi/font": "^5.2.45",
     "axios": "^0.19.2",
     "core-js": "^3.6.4",
+    "firebase": "^7.14.5",
     "firebase-admin": "^8.12.1",
     "firebase-functions": "^3.6.1",
     "vue": "^2.6.11",
