--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "vuetify": "^2.2.11"
   },
   "devDependencies": {
+    "@fortawesome/fontawesome-free": "^5.13.0",
     "@nuxtjs/vuetify": "^1.11.2",
     "@vue/cli-plugin-babel": "~4.3.0",
     "@vue/cli-plugin-eslint": "~4.3.0",
